--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Kyle's Music 
-email: kylesthrowaway1@gmail.com
+title: Kyle's Music
 description: > # this means to ignore newlines until "baseurl:"
   Download music and click things
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://music.kylemattimore.com" # the base hostname & protocol for your site
+url: "https://music.kylemattimore.com" # the base hostname & protocol for your site
 twitter_username: kylemattimore
 github_username:  kmattimo
 
