--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Kyle's Music
+title: Kyle Makes Noise
 description: > # this means to ignore newlines until "baseurl:"
   Download music and click things
 baseurl: "" # the subpath of your site, e.g. /blog
