--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sonic Musings/Floundering | Kyle Mattimore
+title: Sonic Musings
 description: > # this means to ignore newlines until "baseurl:"
-  Download music and click things. Jekyll-powered music permalink site. 
+  Jekyll-powered music permalink site. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://music.kylemattimore.com" # the base hostname & protocol for your site
 twitter_username: kylemattimore
