--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sonic Musings
+title: Kyle Mattimore | The Broken Arrow Complex
 description: > # this means to ignore newlines until "baseurl:"
   Jekyll-powered music permalink site. 
 baseurl: "" # the subpath of your site, e.g. /blog
